tests/security/sinkAnnotation/output.txt
ERROR: TaintedData - input.hack:12:21 - Data from a URL query string found its way to a SQL query